--- a/.github/workflows/three-stage.yml
+++ b/.github/workflows/three-stage.yml
@@ -21,6 +21,19 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/v2.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+
+          1 File With Changes
+          Reject all
+          Accept all
+          +5
+          -0
+          three-stage.yml
+          .github/workflows/three-stage.yml
+          
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
