--- a/.github/workflows/three-stage.yml
+++ b/.github/workflows/three-stage.yml
@@ -25,15 +25,7 @@ jobs:
         run: |
           sudo curl -L "https://github.com/docker/compose/releases/download/v2.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
-
-          1 File With Changes
-          Reject all
-          Accept all
-          +5
-          -0
-          three-stage.yml
-          .github/workflows/three-stage.yml
-          
+          docker-compose --version
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
