--- a/.github/workflows/three-stage.yml
+++ b/.github/workflows/three-stage.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Build Docker images with Compose
         run: docker-compose build
 
+      - name: List Docker images
+        run: docker images
+
       - name: Tag app image for GHCR
         run: |
           REPO_OWNER_LC=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
