--- a/.github/workflows/three-stage.yml
+++ b/.github/workflows/three-stage.yml
@@ -39,27 +39,30 @@ jobs:
       - name: List Docker images to verify built image name
         run: docker images
 
-      - name: Tag app image for GHCR
+      - name: Tag and push app image to GHCR
         run: |
-          # Extract service name from docker-compose.yml
-          SERVICE_NAME=$(grep -A 5 'services:' docker-compose.yml | grep -v 'services:' | grep -v 'postgres:' | grep -v '#' | head -n 1 | tr -d '[:space:]' | tr -d ':')
-          # Determine project name (directory name, lowercased, hyphens to underscores)
+          # Get repository name from GitHub context
+          REPO_NAME=$(echo "${{ github.repository }}" | cut -d'/' -f2 | tr '[:upper:]' '[:lower:]')
+          
+          # Get the first non-db service from docker-compose
+          SERVICE_NAME=$(docker-compose config --services | grep -v 'db' | grep -v 'postgres' | head -n 1)
+          
+          # If no specific service found, use 'app' as default
+          if [ -z "$SERVICE_NAME" ]; then
+            SERVICE_NAME="app"
+          fi
+          
+          # Get project name (directory name, lowercased, hyphens to underscores)
           PROJECT_NAME=$(basename $(pwd) | tr '[:upper:]' '[:lower:]' | tr '-' '_')
-          # Construct image name
-          IMAGE_NAME=${PROJECT_NAME}_${SERVICE_NAME}
-          REPO_OWNER_LC=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
-          docker tag ${IMAGE_NAME}:latest ghcr.io/$REPO_OWNER_LC/xo-game-app:latest
-
-      - name: Push app image to GHCR
-        run: |
-          # Extract service name from docker-compose.yml
-          SERVICE_NAME=$(grep -A 5 'services:' docker-compose.yml | grep -v 'services:' | grep -v 'postgres:' | grep -v '#' | head -n 1 | tr -d '[:space:]' | tr -d ':')
-          # Determine project name (directory name, lowercased, hyphens to underscores)
-          PROJECT_NAME=$(basename $(pwd) | tr '[:upper:]' '[:lower:]' | tr '-' '_')
-          # Construct image name
-          IMAGE_NAME=${PROJECT_NAME}_${SERVICE_NAME}
-          REPO_OWNER_LC=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
-          docker push ghcr.io/$REPO_OWNER_LC/xo-game-app:latest
+          
+          # Construct source and target image names
+          SOURCE_IMAGE=${PROJECT_NAME}_${SERVICE_NAME}:latest
+          TARGET_IMAGE=ghcr.io/$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')/${REPO_NAME}:latest
+          
+          # Tag and push the image
+          echo "Tagging $SOURCE_IMAGE as $TARGET_IMAGE"
+          docker tag $SOURCE_IMAGE $TARGET_IMAGE
+          docker push $TARGET_IMAGE
 
   test:
     name: Integration & Unit Tests
