--- a/.github/workflows/three-stage.yml
+++ b/.github/workflows/three-stage.yml
@@ -79,34 +79,12 @@ jobs:
   test:
     needs: build-and-push
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:15
-        env:
-          POSTGRES_USER: test_user
-          POSTGRES_PASSWORD: test_password
-          POSTGRES_DB: test_db
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd "pg_isready -U test_user -d test_db"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-    env:
-      DB_HOST: localhost
-      DB_PORT: 5432
-      DB_NAME: test_db
-      DB_USER: test_user
-      DB_PASSWORD: test_password
-      NODE_ENV: test
-      PORT: 3001  # Use a different port for tests
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
+    - name: Use Node.js 18.x
+      uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: 18.x
         cache: 'npm'
     - name: Install dependencies
       run: npm ci
