feat: initial commit - complete XO Game infrastructure
- 🎮 XO Game application with Node.js
- ☸️ Kubernetes deployment with auto-scaling
- 🗄️ Distributed PostgreSQL cluster
- 💾 Shared storage across all nodes
- 📊 Complete monitoring with Prometheus & Grafana
- 🔄 CI/CD pipeline with GitHub Actions
- 🧪 Advanced load testing suite
- 🏗️ Infrastructure as Code with Terraform
- 📚 Comprehensive documentation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
   # Node.js Application
   app:
     build: .
-    container_name: xo-game-app
+    container_name: xo-game
     ports:
       - "4000:8080"
     environment:
