--- a/package.json
+++ b/package.json
@@ -1,17 +1,48 @@
 {
   "name": "xo-game",
   "version": "1.0.0",
-  "description": "A simple XO (Tic-Tac-Toe) game built with Node.js",
+  "description": "🎮 Production-ready XO (Tic-Tac-Toe) game with Kubernetes, auto-scaling, monitoring, and CI/CD",
   "main": "server.js",
+  "homepage": "https://github.com/yourusername/xo-game#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yourusername/xo-game.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yourusername/xo-game/issues"
+  },
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "build": "docker build -t xo-game:latest .",
+    "deploy": "./deploy-all.sh",
+    "load-test": "./scripts/advanced-load-test.sh",
+    "monitor": "kubectl get pods -n xo-game -w"
   },
-  "keywords": ["game", "xo", "tic-tac-toe", "nodejs"],
-  "author": "",
+  "keywords": [
+    "game",
+    "xo",
+    "tic-tac-toe",
+    "nodejs",
+    "kubernetes",
+    "docker",
+    "microservices",
+    "auto-scaling",
+    "monitoring",
+    "prometheus",
+    "grafana",
+    "ci-cd",
+    "terraform",
+    "load-testing",
+    "high-availability",
+    "production-ready"
+  ],
+  "author": "Your Name <your.email@example.com>",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
